--- a/InterestingNumbers/Resources/GoogleService-Info.plist
+++ b/InterestingNumbers/Resources/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>992162253033-5u89jdtgabn4omivh9apr2lnpfc8l62r.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.992162253033-5u89jdtgabn4omivh9apr2lnpfc8l62r</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAOnSJyr922D8I8RHCQDUU30GahXbJbpw8</string>
 	<key>GCM_SENDER_ID</key>
