--- a/InterestingNumbers/Resources/Info.plist
+++ b/InterestingNumbers/Resources/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.992162253033-5u89jdtgabn4omivh9apr2lnpfc8l62r</string>
+			</array>
+		</dict>
+	</array>
+	<key>GIDClientID</key>
+	<string>992162253033-5u89jdtgabn4omivh9apr2lnpfc8l62r.apps.googleusercontent.com</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
