--- a/InterestingNumbers/Resources/Info.plist
+++ b/InterestingNumbers/Resources/Info.plist
@@ -32,5 +32,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 </dict>
 </plist>
