--- a/Interesting_Numbers.xcodeproj/xcshareddata/xcschemes/Interesting_Numbers.xcscheme
+++ b/Interesting_Numbers.xcodeproj/xcshareddata/xcschemes/Interesting_Numbers.xcscheme
@@ -44,6 +44,17 @@
                ReferencedContainer = "container:Interesting_Numbers.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9CDC39F62ACEFF19006B5DB3"
+               BuildableName = "Interesting_NumbersUITests.xctest"
+               BlueprintName = "Interesting_NumbersUITests"
+               ReferencedContainer = "container:Interesting_Numbers.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
